crates/pardosa-schema/tests/compile_fail/hashmap_in_btreemap.stderr
error: EVT-014: GenomeSafe: Map- and set-shaped event payloads are forbidden by Solon doctrine (STORY §4.2): enumerate keys as named struct fields or an enum, or store the map outside the event store.
 --> tests/compile_fail/hashmap_in_btreemap.rs:6:11
  |
6 |     data: BTreeMap<String, HashMap<String, u32>>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
